Fix the view title float and visiblity issues. Make the view title control the NavBar height, buttons are positioned absolute now. Fixes #619. (cherry-picked from 3a1a5b9)

--- a/styles/mobile/blackberry.less
+++ b/styles/mobile/blackberry.less
@@ -36,7 +36,7 @@
 
 .km-blackberry .km-splitview .km-view-title
 {
-    display: block;
+    visibility: visible;
 }
 
 .km-blackberry .km-view-title,
@@ -45,10 +45,8 @@
     text-align: center;
     color: #fff;
     font-size: 1.2em;
-    line-height: 2.34rem;
+    line-height: 2.44rem;
     font-weight: bold;
-    float: left;
-    width: 100%;
 }
 
 .km-blackberry .km-badge,
