--- a/styles/mobile/meego.less
+++ b/styles/mobile/meego.less
@@ -18,12 +18,27 @@
 .km-meego .km-dialog-title
 {
     display: inline-block;
+    visibility: visible;
     color: #fff;
     font-size: 1.5rem;
     line-height: 1.8em;
     margin-left: .3em;
     float: left;
     width: 100%;
+}
+
+.km-meego .km-leftitem,
+.km-meego .km-rightitem
+{
+    position: relative;
+    float: left;
+    left: 0;
+}
+
+.km-meego .km-rightitem
+{
+    float: right;
+    right: 0;
 }
 
 .km-meego .km-navbar .km-view-title
